appconfig/chartmuseum/chartmuseum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chartmuseum-ingress
  namespace: chartmuseum

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"

spec:
  ingressClassName: nginx

  rules:
  - host: chartmuseum.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chartmuseum
            port:
              number: 8080
